force-app/main/default/objects/skilljar__Promo_Code_Pool__c/skilljar__Promo_Code_Pool__c.object-meta.xml
<CustomObject>
    <label>Promo Code Pool</label>
    <nameField>
        <label>Promo Code Pool Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Promo Code Pools</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>