force-app/main/default/objects/skilljar__Promo_Code_Pool__c/fields/skilljar__Percent_Off__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Percent_Off__c</fullName>
    <label>Percent Off</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>