force-app/main/default/objects/skilljar__Promo_Code_Pool__c/fields/skilljar__Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Start_Date_Time__c</fullName>
    <label>Start Date Time</label>
    <type>DateTime</type>
</CustomField>